Prevent layout shift while the menu toggle button appears

--- a/src/sass/layout/_main.scss
+++ b/src/sass/layout/_main.scss
@@ -25,3 +25,11 @@ $block-bar: (
     --block-bar-space: 3vmax;
   }
 }
+
+// Prevent layout shift while the menu toggle button comes from off the screen.
+
+main {
+  position: relative;
+  height: 100%;
+  overflow-x: hidden;
+}
